# WizQTClient

lib/extensionsystem/: pluginview.cpp
src/: CMakeLists.txt  main.cpp  messagecompleter.cpp  messagelistview.cpp  thumbcache.cpp  wizDocumentListView.cpp  wizDocumentListViewItem.cpp  wizmainwindow.cpp  wiznotestyle.cpp
src/plugins/: CMakeLists.txt
src/plugins/markdown/: markdown.cpp  markdown.h
src/plugins/wizservice/: CMakeLists.txt  WizService.pluginspec  avatar.cpp  wizservice_global.h  wizserviceplugin.cpp  wizserviceplugin.h
src/sync/: sync.cpp  sync.h  wizkmsync.cpp  wizkmsync.h
src/widgets/: wizUserInfoWidget.cpp
